update: added abstract and overridden splitStartingHand() methods, winRecord now captures a player's form over multiple games, removed gamesPlayed field for player as winRecord captures this, updated dealStartingHands() method to check if dealer’s starting hand consists of 2 cards of same rank